# cargo-quickfix

./: .errorfile  .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: build.yaml
src/: common.rs  display_command.rs  environment.rs  error.rs  format_string.rs  formatted_message.rs  main.rs  outln.rs  output.rs  output_stream.rs  result.rs  result_ext.rs  splitter.rs  subcommand.rs  token.rs
tests/: common.rs  lib.rs  output.rs  status.rs  test_context.rs
